addded testimonials and updated copy

--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -192,29 +192,29 @@
                     <span class="mastery-session-day">Monday</span>
                     <div class="mastery-session-content">
                         <h4>Group Learning Session</h4>
-                        <p>Core teaching, frameworks, examples. Then you implement what you've learned through structured homework before the next session.</p>
+                        <p>The foundations of newsletter strategy, made simple + easy to understand. Frameworks and examples make it tangible. <br>You implement learnings before the next learning session.</p>
                     </div>
                 </div>
                 <div class="mastery-session-card">
                     <span class="mastery-session-day">Tuesday</span>
                     <div class="mastery-session-content">
                         <h4>Private 1:1 Coaching Call</h4>
-                        <p>Deep, personalised support on your specific newsletter</p>
+                        <p>Deep, personalised sessions based on your individual situation.</p>
                     </div>
                 </div>
                 <div class="mastery-session-card">
                     <span class="mastery-session-day">Thursday</span>
                     <div class="mastery-session-content">
                         <h4>AMA Call</h4>
-                        <p>Bring your questions from the week, get answers in real-time</p>
+                        <p>Bring any questions to this open forum and get answers in real-time</p>
                     </div>
                 </div>
             </div>
 
-            <p>This isn't passive content consumption. Each week you'll leave the learning session with clear homework to implement what you've learned—with direct guidance from a newsletter pro.</p>
+            <p>This isn't passive content consumption. <br>Each week you'll leave the learning session with clear homework, ready to implement what you've learned with support and guidance from a newsletter pro.</p>
             
             <div class="mastery-cohort-size">
-                <p><strong>Cohort size: 4–8 people.</strong><br>Small enough for real conversation. Big enough for diverse perspectives.</p>
+                <p><strong>Cohort size: 4–8 people.</strong><br>Small enough for real impact.<br>Big enough for community accountability + connection.</p>
             </div>
         </div>
     </section>
@@ -230,23 +230,23 @@
                     <h3>Core Program</h3>
                     <div class="mastery-core-item">
                         <strong>4 weeks of live group learning sessions (recorded for replay)</strong>
-                        <p>placeholder</p>
-                        <span class="mastery-core-value">placeholder</span>
+                        <p>Weekly deep dives on the key pillars of newsletter stratey.</p>
+                        <span class="mastery-core-value">The foundation of the program.</span>
                     </div>
                     <div class="mastery-core-item">
                         <strong>4 private 1:1 coaching calls during the program</strong>
-                        <p>placeholder</p>
-                        <span class="mastery-core-value">placeholder</span>
+                        <p>Your individual situation will shape these sessions.</p>
+                        <span class="mastery-core-value"> Strategic soundboarding, tactical support, or quick fire questions, we got you.</span>
                     </div>
                     <div class="mastery-core-item">
                         <strong>Weekly AMA sessions</strong>
-                        <p>placeholder</p>
-                        <span class="mastery-core-value">placeholder</span>
+                        <p>Open office hours for asking questions in an open forum</p>
+                        <span class="mastery-core-value">Discuss and learn with, and from, eachother</span>
                     </div>
                     <div class="mastery-core-item">
                         <strong>Structured homework with direct feedback</strong>
-                        <p>placeholder</p>
-                        <span class="mastery-core-value">placeholder</span>
+                        <p>Specific tasks for you to take away each week to ensure your strategy moves forward</p>
+                        <span class="mastery-core-value">Guidance and accountability are baked into the program</span>
                     </div>
                 </div>
                 <div class="mastery-included-column">
@@ -293,26 +293,61 @@
         </div>
     </section>
 
+        <!-- Testimonials Section -->
+    <section id="testimonials" class="testimonials">
+        <div class="testimonials-container">
+            <h2 class="fade-in">Proof Our Strategies Work</h2>
+            <div class="testimonial-card glass fade-in stagger-1">
+                <div class="testimonial-content">
+                    <script type="text/javascript" src="https://testimonial.to/js/iframeResizer.min.js"></script>
+                    <iframe id='testimonialto-newsletters-tag-all-light' src="https://embed-v2.testimonial.to/w/newsletters?theme=light&card=base&loadMore=on&initialCount=20&tag=all&cc=off" frameborder="0" scrolling="no" width="100%"></iframe>
+                    <script type="text/javascript">iFrameResize({log: false, checkOrigin: false}, '#testimonialto-newsletters-tag-all-light');</script>
+
+                <!-- "Mad Banana Media completely transformed our newsletter strategy. Our open rates increased by 150% and we've seen a significant boost in conversions. Their insights are pure gold!"
+                </div>
+                <div class="testimonial-author">— Sarah Johnson, Founder of TechStart</div> -->
+                </div>
+            <!-- 
+            TESTIMONIAL EMBED INSTRUCTIONS:
+            Replace the testimonial card above with your testimonial.to HTML embed code.
+            The embed should fit within the testimonials-container div.
+            -->
+            <!--<div class="testimonials-cta fade-in stagger-2">
+                <p>Ready to see similar results?</p>
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Book Now For Free</a>
+            </div>
+            -->
+        </div>
+        <!-- <div>
+            <h2 class="fade-in">We helped them.
+            <br>
+            And we can help <span style="color:#f7b40d ;">YOU</span>.</h2>
+            <div class="testimonials-cta fade-in stagger-2">
+                <a href="https://cal.com/mad-banana-media-ojblzk/1-2-1" class="btn btn-large" style="margin-top: 1rem;">Book A Discovery Call</a>
+            </div>
+        </div> -->
+    </section>
+
     <!-- Who This Is For Section -->
     <section class="mastery-for">
         <div class="mastery-container fade-in">
             <!-- <p class="mastery-section-label">Is This For You?</p> -->
-            <h2 class="mastery-section-title">Who This Is For / Not For</h2>
+            <h2 class="mastery-section-title">Wondering if the program is for you? </h2>
 
             <div class="mastery-for-grid">
                 <div class="mastery-for-column yes">
                     <h3>This is for you if:</h3>
                     <div class="mastery-for-item">You're a creator with a product or service to sell</div>
                     <div class="mastery-for-item">You're an entrepreneur relying heavily on social media or personal branding for leads</div>
-                    <div class="mastery-for-item">You're an influencer looking to de-risk your dependence on platform algorithms</div>
-                    <div class="mastery-for-item">You're motivated and can commit ~1.5 days per week to the program through March (this isn't passive content consumption—you'll be implementing)</div>
+                    <div class="mastery-for-item">You're an influencer, and want to de-risk your dependence on platform algorithms with audience ownership</div>
+                    <div class="mastery-for-item">You're motivated and can commit to ~1.5 days/week in March <br>(this isn't passive content consumption. You'll be implementing)</div>
                 </div>
                 <div class="mastery-for-column no">
                     <h3>This is NOT for you if:</h3>
                     <div class="mastery-for-item">You're looking for someone to "do it for you"</div>
                     <div class="mastery-for-item">You're not ready to commit 3–5 hours per week to implementation</div>
                     <div class="mastery-for-item">You don't have (or aren't building) something to sell</div>
-                    <div class="mastery-for-item">You want hacks and tricks instead of sustainable strategy</div>
+                    <div class="mastery-for-item">You want fast hacks and tricks instead of sustainable strategy</div>
                 </div>
             </div>
         </div>
@@ -327,12 +362,12 @@
             <div class="mastery-price-display">
                 <span class="mastery-price-original">£1,900</span>
                 <span class="mastery-price-current">£999</span>
-                <p class="mastery-price-note">This is a one-time founding cohort rate. Future cohorts will be priced at full value.</p>
+                <p class="mastery-price-note">This is a one-time founding cohort rate. <br> Future cohorts will run at full price.</p>
             </div>
-
-            <p class="mastery-payment-note"><strong>Payment plan available:</strong> Reserve your spot for £320, balance due before start.</p>
             <a href="#" class="btn btn-dark btn-large">Reserve Your Spot →</a>
-            <p class="mastery-invitation-note">Currently invitation only.</p>
+            <p class="mastery-invitation-note"><strong>Currently invitation only.</strong></p>
+            <p class="mastery-payment-note"><br><strong>Payment plan available:</strong> email hi[@]madbananamedia.com to request</p>
+
         </div>
     </section>
 
@@ -360,22 +395,22 @@
 
             <div class="mastery-faq-item">
                 <h4>What if I don't have a newsletter yet?</h4>
-                <p>Perfect—you'll build it the right way from day one. We'll use your pre-cohort onboarding call to make sure you're ready to go.</p>
+                <p>Not a problem! You'll be building it the right way from day one. We'll use your pre-cohort onboarding call to make sure you're ready to go.</p>
             </div>
 
             <div class="mastery-faq-item">
                 <h4>Is the content recorded?</h4>
-                <p>Learning sessions are recorded and available for replay. AMA sessions and 1:1 calls remain private.</p>
+                <p>Learning sessions are all recorded and available for replay forever. AMA sessions and 1:1 calls will remain private (of course, if you want to record your 1:1 sessions, you can)</p>
             </div>
 
             <div class="mastery-faq-item">
                 <h4>How much time do I need to commit?</h4>
-                <p>Expect ~1.5 days per week: calls + homework implementation.</p>
+                <p>Expect ~1.5 days per week: 3 hours on calls, plus around 1 day/week on homework (implementating what you've learned).</p>
             </div>
 
             <div class="mastery-faq-item">
                 <h4>What if I have to miss a session?</h4>
-                <p>Life happens. Learning sessions are recorded. We'll work around scheduling conflicts for 1:1s where possible.</p>
+                <p>Life happens. All learning sessions are recorded, and you'll get lifetime access. For private 1:1s, we can be flexible and work around any scheduling conflicts.</p>
             </div>
 
             <div class="mastery-faq-item">
@@ -390,7 +425,7 @@
         <div class="mastery-container">
             <a href="#" class="btn btn-large">Reserve Your Spot →</a>
             <span class="mastery-banana-emoji">🍌</span>
-            <p class="mastery-tagline">No drama banana.</p>
+            <p class="mastery-tagline">No drama, Mad banana.</p>
         </div>
     </section>
 
