stripe links added and thank you page added

--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -125,7 +125,7 @@
                 <div class="mastery-transformation-row">
                     <span class="mastery-transformation-before">Guessing what to send and when</span>
                     <span class="mastery-transformation-arrow">→</span>
-                    <span class="mastery-transformation-after">Content calendar + templates that work while you sleep</span>
+                    <span class="mastery-transformation-after">Content clarity + bespoke templates making content production lightning fast</span>
                 </div>
                 <div class="mastery-transformation-row">
                     <span class="mastery-transformation-before">Uncomfortable selling to your list</span>
@@ -369,7 +369,7 @@
                 <span class="mastery-price-current">£999</span>
                 <p class="mastery-price-note">This is a one-time founding cohort rate. <br> Future cohorts will run at full price.</p>
             </div>
-            <a href="#" class="btn btn-dark btn-large">Reserve Your Spot →</a>
+            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-dark btn-large">Reserve Your Spot →</a>
             <p class="mastery-invitation-note"><strong>Currently invitation only.</strong></p>
             <p class="mastery-payment-note"><br><strong>Payment plan available:</strong> email hi[@]madbananamedia.com to request</p>
 
@@ -379,11 +379,11 @@
     <!-- Final CTA Section -->
     <section class="mastery-final-cta">
         <div class="mastery-container fade-in">
-            <h2>Ready to be a Top 1%, category-defining creator?</h2>
-            <p>Stop being "that guy from LinkedIn" or "that IG girl."</p>
-            <p>Own your audience. Transform your newsletter. In just 4 weeks.</p>
-            <a href="#" class="btn btn-large">Reserve Your Spot — £320 to secure →</a>
-            <p class="mastery-spots-remaining">Next cohort: March 2–27, 2026<br>6 spots remaining</p>
+            <h2>Ready to be a category-defining, top 1% creator?</h2>
+            <p>Stop being "that dude from YouTube" or "that IG travel girly."</p>
+            <p>Own your audience and transform your newsletter. In just 4 weeks.</p>
+            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot Now →</a>
+            <p class="mastery-spots-remaining">Next cohort: March 2–27, 2026<br>Seats Are Limited.</p>
         </div>
     </section>
 
@@ -428,7 +428,7 @@
     <!-- Closing CTA -->
     <section class="mastery-closing-cta">
         <div class="mastery-container">
-            <a href="#" class="btn btn-large">Reserve Your Spot →</a>
+            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot Now →</a>
             <span class="mastery-banana-emoji">🍌</span>
             <p class="mastery-tagline">No drama, Mad banana.</p>
         </div>
