quick copy updates

--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -44,7 +44,8 @@
             <p><strong>YouTube, Instagram, LinkedIn, TikTok...</strong></p>
             <p>Even <strong>bloggers</strong> put their destiny in the hands of Google's ranking algorithm, which can tank reach in a single update.</p>
             <p>We all love the vanity metrics</p>
-            <p>Views, likes, comments, shares, saves, followers... <br>And we tell ourselves if we keep growing the audience, things will get easier.</p>
+            <p>Views, likes, comments, shares, saves, followers...</p>
+            <p>And we tell ourselves if we keep growing the audience, things will get easier.</p>
             <p>We'll be more independent, more successful.</p>
             <p>But we're wrong.</p>
             <p>With every milestone, the chains that tie you to The Algorithm get heavier and heavier.</p>
