--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -352,7 +352,7 @@
                     <h3>This is NOT for you if:</h3>
                     <div class="mastery-for-item">You're looking for someone to "do it for you"</div>
                     <div class="mastery-for-item">You're not ready to commit 3–5 hours per week to implementation</div>
-                    <div class="mastery-for-item">You don't have (or aren't building) something to sell</div>
+                    <div class="mastery-for-item">You don't have (or aren't building) something to sell (including sponsorships)</div>
                     <div class="mastery-for-item">You want fast hacks and tricks instead of sustainable strategy</div>
                 </div>
             </div>
@@ -371,7 +371,7 @@
                 <p class="mastery-price-note">This is a one-time founding cohort rate. <br> Future cohorts will run at full price.</p>
             </div>
             <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-dark btn-large">Reserve Your Spot →</a>
-            <p class="mastery-invitation-note"><strong>Currently invitation only.</strong></p>
+            <!-- <p class="mastery-invitation-note"><strong>Currently invitation only.</strong></p> -->            
             <p class="mastery-payment-note"><br><strong>Payment plan available:</strong> email hi[@]madbananamedia.com to request</p>
 
         </div>
@@ -381,10 +381,10 @@
     <section class="mastery-final-cta">
         <div class="mastery-container fade-in">
             <h2>Ready to be a category-defining, top 1% creator?</h2>
-            <p>Stop being "that dude from YouTube" or "that IG travel girly."</p>
-            <p>Own your audience and transform your newsletter. In just 4 weeks.</p>
-            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot Now →</a>
-            <p class="mastery-spots-remaining">Next cohort: March 2–27, 2026<br>Seats Are Limited.</p>
+            <p><strong>Be more than</strong><br><br>'That dude from YouTube' or <br><br>'That IG travel girly.' or <br><br>'That LinkedIn influencer'<br><br></p>
+            <p>Own your audience and transform your newsletter.<br> In just 4 weeks.</p>
+            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot →</a>
+            <p class="mastery-spots-remaining">Cohort Dates: March 2–27, 2026<br><br>Seats Are Limited. Join Now.</p>
         </div>
     </section>
 
@@ -429,9 +429,9 @@
     <!-- Closing CTA -->
     <section class="mastery-closing-cta">
         <div class="mastery-container">
-            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot Now →</a>
+            <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-large">Reserve Your Spot →</a>
             <span class="mastery-banana-emoji">🍌</span>
-            <p class="mastery-tagline">No drama, Mad banana.</p>
+            <p class="mastery-tagline">No Drama, Mad Banana.</p>
         </div>
     </section>
 
