--- a/newslettermasteryprogram.html
+++ b/newslettermasteryprogram.html
@@ -377,7 +377,7 @@
             
             <div class="mastery-price-display">
                 <span class="mastery-price-original">£1,900</span>
-                <span class="mastery-price-current">£999</span>
+                <span class="mastery-price-current"> <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" style="color: black; text-decoration: none;">£999</a></span>
                 <p class="mastery-price-note">This is a one-time founding cohort rate. <br> Future cohorts will run at full price.</p>
             </div>
             <a href="https://buy.stripe.com/4gM5kCclq7oebJw1kZaR200" target="_blank" class="btn btn-dark btn-large">Reserve Your Spot →</a>
