--- a/training.html
+++ b/training.html
@@ -17,10 +17,10 @@
         <div class="nav-container">
             <a href="https://madbananamedia.com" class="logo">MAD BANANA MEDIA 🍌</a>
             <ul class="nav-menu">
-                <li><a href="#about">Our Why</a></li>
-                <li><a href="#services">Our What</a></li>
-                <li><a href="#testimonials">Our Results</a></li>
-                <li><a href="#faq">Your Questions</a></li>
+                <li><a href="https://madbananamedia.com/#about">Our Why</a></li>
+                <li><a href="https://madbananamedia.com/#services">Our What</a></li>
+                <li><a href="https://madbananamedia.com/#testimonials">Our Results</a></li>
+                <li><a href="https://madbananamedia.com/#faq">Your Questions</a></li>
                 <li><a href="https://madbananamedia.com/partners">Partners</a></li>
                 <li><a href="https://cal.com/mad-banana-media-ojblzk/1-2-1">Chat With Us</a></li>
             </ul>
